# musket

osh/: .gitignore
osh/Project/: Project.sln
osh/Project/Breakout/: Breakout.vcxproj  Main.cpp
osh/Project/Framework/: Framework.vcxproj  Framework.vcxproj.filters
osh/Project/Framework/Include/: Common.h  Framework.h  Mesh.h
osh/Project/Framework/Source/: Framework.cpp
yzt/: .gitignore  CMakeLists.txt
yzt/code/: bo_main.cpp  bo_math.hpp  bo_render.hpp
yzt/dep/lib/win/x64/: SDL2-static.lib  SDL2main.lib  SDL2maind.lib
